# IRIS

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IRIS_BEHAVIOR_PLAN.md  LICENSE  README.md  README_new.md  REVAMP.md  docker-compose.yml  package.json  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: casi-researcher.md  casi.md  iris-researcher.md  iris.md
.claude/commands/: casi-config.md  casi-op-implement.md  casi-op-propose.md  casi-plot.md  casi-project-close.md  casi-project-delete.md  casi-project-info.md  casi-project-list.md  casi-project-new.md  casi-project-open.md  casi-project-rename.md  casi-reset.md  casi-start.md  (+14 more)
casi-app/: BUILD_PLAN.md  CLAUDE.md  package-lock.json  package.json  vite.config.ts
configs/: CLAUDE.md  agent_rules.yaml  config.toml  globals.yaml  ops.yaml  paths.yaml
docs/: CLAUDE.md  REVAMP.md  agent-guide.md  analysis-assistant.md  architecture.md  data-format.md  development.md  getting-started.md  iris-behavior.md  iris-memory.md  memory-restructure.md  memory.md  op-proposal-template.md  operations.md  projects.md  refactoring-plan.md  sessions.md
examples/: colab_pipeline.ipynb  pipeline.ipynb
iris-app/: BUILD_PLAN.md  CLAUDE.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
presentation/: build.py  deck.html
projects/: .gitignore  CLAUDE.md  README.md
scripts/: check.ps1  check.sh  check_op_registered.py  hook_ruff_format.py
tests/: CLAUDE.md  conftest.py  synthetic_data.py  test_artifacts.py  test_cache.py  test_cli.py  test_contradictions.py  test_daemon.py  test_daemon_memory.py  test_datasets.py  test_db.py  test_dsl_parser.py  test_embedding_worker.py  test_embeddings.py  test_engine_executor.py  test_engine_ops.py  test_engine_types.py  test_events.py  test_extraction.py  test_memory_entries.py  test_memory_foundation.py  test_memory_phase2.py  test_memory_sessions.py  test_messages.py  test_op_registry.py  test_op_validation.py  test_operations_store.py  test_plot_sessions.py  test_profile.py  test_project_lifecycle.py  test_reflection.py  test_retrieval.py  test_runs.py  test_sessions.py  test_slice_builder.py  test_staleness.py  test_summarization.py  test_tool_calls.py  test_tool_result_clearing_e2e.py  test_transformations.py
(+241 files in other folders)
